2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Add AMANDA_PROG_SUNTAR, --with-suntar=??
	* configure.in: Use AMANDA_PROG_SUNTAR.
	* perl/Amanda/Constants.pm.in: Define $Amanda::Constants::SUNTAR
	* application-src/amsuntar.pl: Use $Amanda::Constants::SUNTAR,
	                               Add SUNTAR-PATH property.
	* man/xml-source/amsuntar.8.xml: Document SUNTAR-PATH property.

2011-03-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Compute maxparts from the list of part.

2011-03-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: If leom is supported by device,
	  then the dle can be split.
	* perl/Amanda/Taper/Worker.pm: Send leom setting to
	  get_splitting_args_from_config.
	* server-src/planner.c: dle can use more than one tape if allow-split
	  is set, this is to handle leom device where splitsize can be 0.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: Use -l to check symlink existance.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: export quote host and disk name, import parse
	  quoted host and disk name.

2011-03-09  Jean-Louis Martineau <martineau@zmanda.com>
	* VERSION: 3.2.2

2011-03-09  Jean-Louis Martineau <martineau@zmanda.com>
	* ReleaseNotes, NEWS: Add changes for 3.2.2

2011-03-08  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Use smbclient -TF for restore.

2011-03-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtrmidx.c: Fix memory leak.

2011-02-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: flush even if flush threshold are not met if
	  it save tape space.

2011-02-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: get_splitting_args_from_config() always
	  return 'allow_split', get_xfer_dest() take a allow_split param,